--- a/assets/scss/components/_search.scss
+++ b/assets/scss/components/_search.scss
@@ -33,7 +33,7 @@
     border: none;
     box-shadow: 4px 57px 67px 0 rgba(75, 82, 113, .09);
     font-family: $font-family;
-    font-size: 17px;
+    font-size: 16px;
     font-weight: 500;
     height: 56px;
     padding: 0 55px 0 24px;
@@ -126,7 +126,7 @@
   .button {
     margin-top: 40px;
     min-width: 150px;
-    font-size: 18px;
+    font-size: 16px;
 
     @include s-up {
       font-size: 13px;
