--- a/assets/scss/helpers/_elements.scss
+++ b/assets/scss/helpers/_elements.scss
@@ -76,7 +76,7 @@ a {
   z-index: 1;
 
   &--small {
-    font-size: 18px;
+    font-size: 16px;
     height: 45px;
     line-height: 45px;
 
